{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 46,
  "lineage": "ff1827cc-66f2-9ba6-4e56-9d40bc2fde01",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e5eaf71866966fea",
            "association_id": "eipassoc-00d673b85753d6748",
            "domain": "vpc",
            "id": "eipalloc-0e5eaf71866966fea",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0fdb4a9ac563e56f9",
            "private_dns": "ip-10-0-2-36.ap-south-1.compute.internal",
            "private_ip": "10.0.2.36",
            "public_dns": "ec2-13-200-169-156.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.200.169.156",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Nat-GW-eip"
            },
            "tags_all": {
              "Name": "Nat-GW-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732837927423:internet-gateway/igw-0fae88794a1a4fb6f",
            "id": "igw-0fae88794a1a4fb6f",
            "owner_id": "732837927423",
            "tags": {
              "Name": "Fintrust-Prod-VPC-IGW"
            },
            "tags_all": {
              "Name": "Fintrust-Prod-VPC-IGW"
            },
            "vpc_id": "vpc-0d0506040998871ad"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e5eaf71866966fea",
            "association_id": "eipassoc-00d673b85753d6748",
            "connectivity_type": "public",
            "id": "nat-0fd49f11b6454d5aa",
            "network_interface_id": "eni-0fdb4a9ac563e56f9",
            "private_ip": "10.0.2.36",
            "public_ip": "13.200.169.156",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-060c1194b43f3c220",
            "tags": {
              "Name": "Fintrust-Prod-VPC-NGW"
            },
            "tags_all": {
              "Name": "Fintrust-Prod-VPC-NGW"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw",
            "aws_subnet.private_subs",
            "aws_subnet.public_subs",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732837927423:route-table/rtb-001242b97560b8295",
            "id": "rtb-001242b97560b8295",
            "owner_id": "732837927423",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0fd49f11b6454d5aa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Fintrust-Prod-VPC-Private-RT"
            },
            "tags_all": {
              "Name": "Fintrust-Prod-VPC-Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0506040998871ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.ngw",
            "aws_subnet.private_subs",
            "aws_subnet.public_subs",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "second_rt",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732837927423:route-table/rtb-04d7e7e6e13b0625c",
            "id": "rtb-04d7e7e6e13b0625c",
            "owner_id": "732837927423",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fae88794a1a4fb6f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Fintrust-Prod-VPC-Public-RT"
            },
            "tags_all": {
              "Name": "Fintrust-Prod-VPC-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0506040998871ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_subnet.public_subs",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_asso",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c1182febc817f52",
            "route_table_id": "rtb-001242b97560b8295",
            "subnet_id": "subnet-0a8eab42da90248ed"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.ngw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subs",
            "aws_subnet.public_subs",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf302429d2d2b733",
            "route_table_id": "rtb-001242b97560b8295",
            "subnet_id": "subnet-05ae74c19974b7750"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.ngw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subs",
            "aws_subnet.public_subs",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_asso",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0383d98758ebd6669",
            "route_table_id": "rtb-04d7e7e6e13b0625c",
            "subnet_id": "subnet-064f2780dfffdd44a"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.second_rt",
            "aws_subnet.public_subs",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038b9ae3deec7519c",
            "route_table_id": "rtb-04d7e7e6e13b0625c",
            "subnet_id": "subnet-060c1194b43f3c220"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.second_rt",
            "aws_subnet.public_subs",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subs",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732837927423:subnet/subnet-0a8eab42da90248ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8eab42da90248ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "732837927423",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Fintrust-Prod-VPC-PrivateSubnet-1"
            },
            "tags_all": {
              "Name": "Fintrust-Prod-VPC-PrivateSubnet-1"
            },
            "vpc_id": "vpc-0d0506040998871ad"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732837927423:subnet/subnet-05ae74c19974b7750",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ae74c19974b7750",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "732837927423",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Fintrust-Prod-VPC-PrivateSubnet-2"
            },
            "tags_all": {
              "Name": "Fintrust-Prod-VPC-PrivateSubnet-2"
            },
            "vpc_id": "vpc-0d0506040998871ad"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subs",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732837927423:subnet/subnet-064f2780dfffdd44a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064f2780dfffdd44a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "732837927423",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Fintrust-Prod-VPC-PublicSubnet-1"
            },
            "tags_all": {
              "Name": "Fintrust-Prod-VPC-PublicSubnet-1"
            },
            "vpc_id": "vpc-0d0506040998871ad"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732837927423:subnet/subnet-060c1194b43f3c220",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060c1194b43f3c220",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "732837927423",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Fintrust-Prod-VPC-PublicSubnet-2"
            },
            "tags_all": {
              "Name": "Fintrust-Prod-VPC-PublicSubnet-2"
            },
            "vpc_id": "vpc-0d0506040998871ad"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:732837927423:vpc/vpc-0d0506040998871ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fc0042be7af0063f",
            "default_route_table_id": "rtb-05f189ec9d17f288b",
            "default_security_group_id": "sg-03168913431e68cf2",
            "dhcp_options_id": "dopt-0b58b62d1a4b56f20",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d0506040998871ad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05f189ec9d17f288b",
            "owner_id": "732837927423",
            "tags": {
              "Name": "Fintrust-Prod-VPC"
            },
            "tags_all": {
              "Name": "Fintrust-Prod-VPC"
            }
          }
        }
      ]
    }
  ]
}